# BackendBro

./: .gitignore  Cargo.toml  README.md
schemas/: api_schema.json
src/: main.rs
src/ai_functions/: ai_func_architect.rs  mod.rs
src/helpers/: command_line.rs  general.rs
src/models/: mod.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agents_traits.rs  mod.rs
src/models/agents_basic/: basic_agent.rs  basic_trait.rs
src/models/agents_manager/: managing_agent.rs  mod.rs
src/models/general/: llm.rs
web_template/: Cargo.toml  database.json  pokemon_database.json
web_template/src/: code_template.rs  main.rs
